# extrempunkte_in_gleichungen_bestimmmen

./: .gitignore  .replit  install.sh  main.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  run-replit.sh
.upm/: store.json
