[tool.poetry]
name = "extrempunkte_in_gleichungen_bestimmmen"
version = "0.1.0"
description = ""
authors = ["AstragoDE"]

[tool.poetry.dependencies]
python = ">=3.8.0"
numpy = "^1.22.2"
sympy = "^1.10.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"