[tool.poetry]
name = "extrempunkte_in_gleichungen_bestimmmen"
version = "0.1.0"
description = "extrempunkte_in_gleichungen_bestimmmen"
authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
license = "CC-BY-NC-SA https://creativecommons.org/licenses/by-nc-sa/4.0/"

[tool.poetry.dependencies]
python = "^3.9"
sympy = "^1.10.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
